# patch-denoising

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  README.rst  api.html  denoisers.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  sphinx-reading-durations.json  tox.ini  usage.html
.github/: dependabot.yml
.github/workflows/: cd-build.yaml  ci-build.yml  master-cd.yml  tags-release.yml  test-ci.yml  update_precommit_hooks.yml
_autosummary/: patch_denoise.bindings.cli.ToDict.html  patch_denoise.bindings.cli.bids_app.html  patch_denoise.bindings.cli.html  patch_denoise.bindings.cli.main.html  patch_denoise.bindings.cli.parse_args.html  patch_denoise.bindings.html  patch_denoise.bindings.modopt.LLRDenoiserOperator.html  patch_denoise.bindings.modopt.html  patch_denoise.bindings.nipype.NoiseStdMap.html  patch_denoise.bindings.nipype.NoiseStdMapInputSpec.html  patch_denoise.bindings.nipype.NoiseStdMapOutputSpec.html  patch_denoise.bindings.nipype.PatchDenoise.html  patch_denoise.bindings.nipype.PatchDenoiseInputSpec.html  patch_denoise.bindings.nipype.PatchDenoiseOutputSpec.html  patch_denoise.bindings.nipype.html  patch_denoise.bindings.utils.DenoiseParameters.html  patch_denoise.bindings.utils.compute_mask.html  patch_denoise.bindings.utils.html  patch_denoise.bindings.utils.load_as_array.html  patch_denoise.bindings.utils.load_complex_nifti.html  patch_denoise.bindings.utils.save_array.html  patch_denoise.denoise.adaptive_thresholding.html  patch_denoise.denoise.html  patch_denoise.denoise.hybrid_pca.html  patch_denoise.denoise.mp_pca.html  patch_denoise.denoise.nordic.html  patch_denoise.denoise.optimal_thresholding.html  patch_denoise.denoise.raw_svt.html  patch_denoise.html  patch_denoise.simulation.activations.add_frames.html  patch_denoise.simulation.activations.html  patch_denoise.simulation.html  patch_denoise.simulation.noise.add_temporal_gaussian_noise.html  patch_denoise.simulation.noise.add_temporal_rician_noise.html  patch_denoise.simulation.noise.html  patch_denoise.simulation.phantom.g_factor_map.html  patch_denoise.simulation.phantom.html  patch_denoise.simulation.phantom.mr_ellipsoid_parameters.html  patch_denoise.simulation.phantom.mr_shepp_logan.html  patch_denoise.simulation.phantom.mr_shepp_logan_t2_star.html  (+20 more)
_modules/: index.html
_modules/denoiser/: denoise.html  utils.html
_modules/denoiser/simulation/: activations.html  noise.html  phantom.html
_modules/denoiser/space_time/: base.html  lowrank.html  utils.html
_modules/denoiser/tests/: conftest.html  test_denoiser.html  test_spacetime_utils.html  test_utils.html
_modules/denoiser/viz/: plots.html  utils.html
_modules/patch_denoise/: denoise.html
_modules/patch_denoise/bindings/: cli.html  modopt.html  nipype.html  utils.html
_modules/patch_denoise/simulation/: activations.html  noise.html  phantom.html
_sources/: api.rst.txt  denoisers.rst.txt  usage.rst.txt
_sources/_autosummary/: patch_denoise.bindings.cli.ToDict.rst.txt  patch_denoise.bindings.cli.bids_app.rst.txt  patch_denoise.bindings.cli.main.rst.txt  patch_denoise.bindings.cli.parse_args.rst.txt  patch_denoise.bindings.cli.rst.txt  patch_denoise.bindings.modopt.LLRDenoiserOperator.rst.txt  patch_denoise.bindings.modopt.rst.txt  patch_denoise.bindings.nipype.NoiseStdMap.rst.txt  patch_denoise.bindings.nipype.NoiseStdMapInputSpec.rst.txt  patch_denoise.bindings.nipype.NoiseStdMapOutputSpec.rst.txt  patch_denoise.bindings.nipype.PatchDenoise.rst.txt  patch_denoise.bindings.nipype.PatchDenoiseInputSpec.rst.txt  patch_denoise.bindings.nipype.PatchDenoiseOutputSpec.rst.txt  patch_denoise.bindings.nipype.rst.txt  patch_denoise.bindings.rst.txt  patch_denoise.bindings.utils.DenoiseParameters.rst.txt  patch_denoise.bindings.utils.compute_mask.rst.txt  patch_denoise.bindings.utils.load_as_array.rst.txt  patch_denoise.bindings.utils.load_complex_nifti.rst.txt  patch_denoise.bindings.utils.rst.txt  patch_denoise.bindings.utils.save_array.rst.txt  patch_denoise.denoise.adaptive_thresholding.rst.txt  patch_denoise.denoise.hybrid_pca.rst.txt  patch_denoise.denoise.mp_pca.rst.txt  patch_denoise.denoise.nordic.rst.txt  patch_denoise.denoise.optimal_thresholding.rst.txt  patch_denoise.denoise.raw_svt.rst.txt  patch_denoise.denoise.rst.txt  patch_denoise.rst.txt  patch_denoise.simulation.activations.add_frames.rst.txt  patch_denoise.simulation.activations.rst.txt  patch_denoise.simulation.noise.add_temporal_gaussian_noise.rst.txt  patch_denoise.simulation.noise.add_temporal_rician_noise.rst.txt  patch_denoise.simulation.noise.rst.txt  patch_denoise.simulation.phantom.g_factor_map.rst.txt  patch_denoise.simulation.phantom.mr_ellipsoid_parameters.rst.txt  patch_denoise.simulation.phantom.mr_shepp_logan.rst.txt  patch_denoise.simulation.phantom.mr_shepp_logan_t2_star.rst.txt  patch_denoise.simulation.phantom.rst.txt  patch_denoise.simulation.rst.txt  (+20 more)
_sources/autoapi/: index.rst.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/denoiser/: index.html
autoapi/denoiser/denoise/: index.html
denoiser/: __init__.py  _docs.py  denoise.py  utils.py
denoiser/bindings/: cli.py  modopt.py  nipype.py  utils.py
denoiser/data/: activations.py  phantom.py
denoiser/simulation/: noise.py  phantom.py
denoiser/space_time/: __init__.py  base.py  lowrank.py  utils.py
denoiser/tests/: conftest.py  test_denoiser.py  test_spacetime_utils.py  test_utils.py
denoiser/viz/: plots.py
docs/: Makefile  api.rst  conf.py  denoisers.rst  index.rst  usage.rst
docs/source/: conf.py  denoisers.rst  index.rst
examples/: README.md  README.rst  __init__.py  conftest.py  example_experimental_data.py  example_visualisation.py  nordic_example.py  plot_experimental_data.py  plot_simulation_data.py  simulation_data.py
scripts/: bids-denoise.sh
src/denoiser/: __init__.py  _docs.py
src/patch_denoise/: __init__.py  _docs.py  denoise.py
tests/: conftest.py  test_bindings.py  test_denoiser.py  test_spacetime_utils.py  test_utils.py
viz/: plots.py
(+76 files in other folders)
