[project]
name = "patch-denoise"
description = "Denoising method for sequence of images or volumes. Primarly targeting fMRI data."
authors = [{name="Pierre-antoine Comby", email="pierre-antoine.comby@crans.org"}]

readme = "README.rst"
dependencies = ["numpy", "scipy", "matplotlib", "tqdm"]
requires-python = ">=3.8"

dynamic = ["version"]

[project.optional-dependencies]
optional = ["modopt", "nipype", "numba"]
test = ["pytest", "pytest-cov", "pytest-xdist", "pytest-sugar"]
# sphinx 6 failes with pydata, sphinx 5 with sphinx gallery...
doc = ["pydata-sphinx-theme", "numpydoc", "sphinx_gallery", "sphinx<5"]
dev = ["black", "isort", "ruff"]

[project.scripts]
patch-denoise = "patch_denoise.bindings.cli:main"

[build-system]
requires = ["setuptools", "setuptools-scm[toml]", "wheel"]

[tool.setuptools_scm]
write_to = "src/patch_denoise/_version.py"
version_scheme = "python-simplified-semver"
local_scheme="no-local-version"

[tool.coverage.run]
omit = ["*tests*", "patch_denoise/bindings/*"]

[tool.coverage.report]
precision = 2
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]


# Formatting using black.
[tool.black]

#linting using ruff
[tool.ruff]
src = ["src", "tests"]
select = ["E", "F", "B", "Q", "UP", "D"]

ignore = ["B905"]
exclude = ["examples/", "tests/"]

[tool.ruff.pydocstyle]
convention="numpy"

[tool.isort]
profile="black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=patch_denoise",
    "--cov-report=term-missing",
    "--cov-report=xml"
]
