[metadata]
name = denoiser
description = Denoiser operator for python
maintainer = Pierre-Antoine Comby
author_email = pierre-antoine.comby@crans.org
long_description = file: README.md
long_description_content_type = text/x-md
platforms = any

[options]
install_requires=
    numpy
    scipy

[options.extras_require]
test =
    pytest
    pytest-cov

doc =
    pydata-sphinx-theme
    numpydoc
    sphinx_gallery
    sphinx

dev =
    black
