[metadata]
name = denoiser
description = Denoiser operator for python
maintainer = Pierre-Antoine Comby
author_email = pierre-antoine.comby@crans.org
long_description = file: README.md
long_description_content_type = text/x-md
platforms = any

[options]
install_requires=
    numpy
    scipy
    matplotlib
    tqdm

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-xdist
    pytest-sugar

doc =
    pydata-sphinx-theme
    numpydoc
    sphinx_gallery
    sphinx
    sphinx-autoapi

dev =
    black
    isort
